changing to streamlit, integrating new algorithms

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,8 @@
             <option value="autokey_vigenere" {% if algo == 'autokey_vigenere' %}selected{% endif %}>Auto-key Vigenere Cipher</option>
             <option value="playfair" {% if algo == 'playfair' %}selected{% endif %}>Playfair Cipher</option>
             <option value="affine" {% if algo == 'affine' %}selected{% endif %}>Affine Cipher</option>
+            <option value="vignere_standard" {% if algo == 'vignere_standard' %}selected{% endif %}>Vignere Standard</option>
+            <option value="extended_vignere" {% if algo == 'extended_vignere' %}selected{% endif %}>Extended Vignere</option>
             <!-- Algoritma lain bisa ditambahkan di sini -->
         </select>
 
